# _YJD_cmake_learning

./: .gitignore  CMakeLists.txt  build.sh  common.cmake  configure.sh  main.cpp  run.sh
point/: CMakeLists.txt  Point.cpp  Point.h
